deleted scaffholded files

--- a/MovieService.Api/appsettings.json
+++ b/MovieService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OMDb": {
+    "ApiKey": "7f204668"
+  }
 }
