User Service Chjeck-in

--- a/UserService.Api/appsettings.json
+++ b/UserService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,32768;Database=FlickBingeUsers;User Id=sa;Password=Docker2025;Persist Security Info=False;TrustServerCertificate=True;"
+  }
 }
