--- a/MovieService.Infrastructure/MovieService.Infrastructure.csproj
+++ b/MovieService.Infrastructure/MovieService.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MovieService.Core\MovieService.Core.csproj" />
+  </ItemGroup>
+
 </Project>
