--- a/MovieService.Api/appsettings.json
+++ b/MovieService.Api/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "OMDb": {
-    "ApiKey": "7f204668"
-  }
+  "AllowedHosts": "*"
 }
