--- a/MovieService.Api/Properties/launchSettings.json
+++ b/MovieService.Api/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OMDb__ApiKey": "7f204668"
       }
     }
   }
