--- a/RecommendationService.Api/RecommendationService.Api.csproj
+++ b/RecommendationService.Api/RecommendationService.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecommendationService.Core\RecommendationService.Core.csproj" />
+    <ProjectReference Include="..\RecommendationService.Infrastructure\RecommendationService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
