--- a/WatchlistService.Api/appsettings.json
+++ b/WatchlistService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WatchlistConnection": "Server=localhost,32768;Database=FlickBingeWatchlist;User Id=sa;Password=Docker2025;Persist Security Info=False;TrustServerCertificate=True;"
+  }
 }
