FlicvkBinge UI addition and api Fixes (Auth)

--- a/WatchlistService.Api/appsettings.json
+++ b/WatchlistService.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WatchlistConnection": "Server=localhost,32768;Database=FlickBingeWatchlist;User Id=sa;Password=Docker2025;Persist Security Info=False;TrustServerCertificate=True;"
+    "WatchlistConnection": "Data Source=localhost,1433;Database=FlickBingeWatchlist;Persist Security Info=True;User ID=SA;Password=Docker@2025;Pooling=False;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=True;Command Timeout=30"
   }
 }
