--- a/UserService.Api/appsettings.json
+++ b/UserService.Api/appsettings.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,32768;Database=FlickBingeUsers;User Id=sa;Password=Docker2025;Persist Security Info=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=FlickBingeUsers;User Id=sa;Password=Docker@2025;Persist Security Info=False;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "FlickBingeAuthKey2025",
+    "Issuer": "FlickBinge.Auth",
+    "Audience": "FlickBinge.Client",
+    "AccessTokenExpiryMinutes": 30,
+    "RefreshTokenExpiryDays": 7
   }
+
 }
