--- a/UserService.Api/appsettings.json
+++ b/UserService.Api/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=localhost,1433;Database=FlickBingeUsers;User Id=sa;Password=Docker@2025;Persist Security Info=False;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "FlickBingeAuthKey2025",
+    "Key": "p9s8dN6QyZxH4fTqjW8bL2VmRk3uXy5aGhJtCvFqYzE=",
     "Issuer": "FlickBinge.Auth",
     "Audience": "FlickBinge.Client",
     "AccessTokenExpiryMinutes": 30,
