--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "p9s8dN6QyZxH4fTqjW8bL2VmRk3uXy5aGhJtCvFqYzE=", // must match UserService
+    "Issuer": "FlickBinge.Auth", // must match jwtSettings["Issuer"] in UserService
+    "Audience": "FlickBinge.Client" // must match jwtSettings["Audience"] in UserService
+  },
   "ReverseProxy": {
     "Routes": {
       "users": {
@@ -18,6 +23,7 @@
       "movies": {
         "ClusterId": "moviesCluster",
         "Match": { "Path": "/movies/{**catchall}" },
+        "AuthorizationPolicy": "authenticated",
         "Transforms": [
           { "PathRemovePrefix": "/movies" }
         ]
@@ -25,6 +31,7 @@
       "watchlist": {
         "ClusterId": "watchlistCluster",
         "Match": { "Path": "/watchlist/{**catchall}" },
+        "AuthorizationPolicy": "authenticated",
         "Transforms": [
           { "PathRemovePrefix": "/watchlist" }
         ]
@@ -32,6 +39,7 @@
       "recommendations": {
         "ClusterId": "recommendationsCluster",
         "Match": { "Path": "/recommendations/{**catchall}" },
+        "AuthorizationPolicy": "authenticated",
         "Transforms": [
           { "PathRemovePrefix": "/recommendations" }
         ]
