--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "p9s8dN6QyZxH4fTqjW8bL2VmRk3uXy5aGhJtCvFqYzE=", // must match UserService
-    "Issuer": "FlickBinge.Auth", // must match jwtSettings["Issuer"] in UserService
-    "Audience": "FlickBinge.Client" // must match jwtSettings["Audience"] in UserService
+    "Key": "p9s8dN6QyZxH4fTqjW8bL2VmRk3uXy5aGhJtCvFqYzE=",
+    "Issuer": "FlickBinge.Auth",
+    "Audience": "FlickBinge.Client"
   },
   "ReverseProxy": {
     "Routes": {
