--- a/RecommendationService.Infrastructure/RecommendationService.Infrastructure.csproj
+++ b/RecommendationService.Infrastructure/RecommendationService.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.64.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.64.0" />
+    <PackageReference Include="Polly" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
